[metadata]
name = pyplan-ide
version = 0.31.1
description = Pyplan is a graphical Integrated Development Environment for creating and sharing Data Analytics Apps.
long_description = file: README.rst
license = Free for non-commercial use
url = http://www.pyplan.com/
author = Pyplan 
author_email = info@pyplan.com
classifiers = 
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Operating System :: OS Independent
    License :: Free for non-commercial use
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization


[options]
include_package_data = true
packages = find:


[options.entry_points]
console_scripts =
    pyplan = pyplan.__main__:main    
