[metadata]
name = pyplan-ide
version = 0.31.1
description = Pyplan is a graphical Integrated Development Environment for creating and sharing Data Analytics Apps.
long_description = file: README.rst
license = MIT
home-page = https://github.com/pyplan/pyplan-ide
url = https://www.pyplan.org
author = Pyplan 
author_email = info@pyplan.com
classifiers = 
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization


[options]
include_package_data = true
packages = find:


[options.entry_points]
console_scripts =
    pyplan = pyplan.__main__:main    
